--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,10 +41,10 @@ dependencies {
     implementation 'org.greenrobot:greendao:3.2.2'
     //bitcoinj 需要依赖的库
     implementation 'org.bitcoinj:bitcoinj-core:0.14.7'
+    //Android 支持 Rxjava
     implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
-    //配合retrofit
-    implementation 'com.squareup.retrofit2:adapter-rxjava:2.4.0'
+    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     //retrofit 数据转换器
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
