--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:windowSoftInputMode="adjustPan|stateHidden">
+        android:theme="@style/AppTheme">
 
         <activity android:name=".ui.activity.BrandActivity">
             <intent-filter>
@@ -35,7 +34,10 @@
         </provider>
 
         <activity android:name=".ui.activity.LoginActivity" />
-        <activity android:name=".ui.activity.MainActivity" />
+        <activity
+            android:name=".ui.activity.MainActivity"
+            android:launchMode="singleTask"
+            android:windowSoftInputMode="adjustPan|stateHidden" />
         <activity android:name=".ui.activity.CreateWalletActivity" />
         <activity android:name=".ui.activity.ImportWalletActivity" />
         <activity android:name=".ui.activity.WalletCreatedSuccessActivity" />
