--- a/qrcode/src/main/AndroidManifest.xml
+++ b/qrcode/src/main/AndroidManifest.xml
@@ -7,7 +7,9 @@
     <application
         android:allowBackup="true"
         android:label="@string/app_name">
-        <activity android:name=".activity.CaptureActivity" />
+        <activity
+            android:name=".activity.CaptureActivity"
+            android:screenOrientation="portrait" />
 
     </application>
 </manifest>
