--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,7 +51,8 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activity.SetPwdForImportWalletActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize|stateHidden" />
         <activity
             android:name=".ui.activity.CheckWalletInfoActivity"
             android:screenOrientation="portrait" />
