--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,15 @@ android {
         javaMaxHeapSize "8g"
         jumboMode = true
     }
+
+    splits {
+        abi {
+            enable true
+            reset()
+            include 'x86', 'armeabi-v7a','x86_64'
+            universalApk true
+        }
+    }
 }
 
 dependencies {
