--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,14 @@ android {
         versionName "1.0"
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        splits {
+            abi {
+                enable true
+                reset()
+                include 'x86', 'armeabi-v7a', 'x86_64'
+                universalApk true
+            }
+        }
     }
     buildTypes {
         debug {
@@ -33,15 +41,17 @@ android {
         javaMaxHeapSize "8g"
         jumboMode = true
     }
-
-    splits {
-        abi {
-            enable true
-            reset()
-            include 'x86', 'armeabi-v7a','x86_64'
-            universalApk true
-        }
+    
+    packagingOptions {
+        exclude 'META-INF/*.version'
+        exclude 'lib/x86_64/darwin/libscrypt.dylib'
+        exclude 'okhttp3/internal/publicsuffix/publicsuffixes.gz'
+        exclude 'org/bitcoinj/crypto/mnemonic/wordlist/english.txt'
+        exclude 'org/bitcoinj/crypto/cacerts'
+        exclude 'org.bitcoin.production.checkpoints.txt'
+        exclude 'org.bitcoin.test.checkpoints.txt'
     }
+
 }
 
 dependencies {
@@ -52,7 +62,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.android.support:design:28.0.0-rc01'
     //Android方法数methods超过65536
-    implementation 'com.android.support:multidex:1.0.1'
+    implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation project(':qrcode')
@@ -62,8 +72,8 @@ dependencies {
     //bitcoinj 需要依赖的库
     implementation 'org.bitcoinj:bitcoinj-core:0.14.7'
     //Android 支持 Rxjava
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.1'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     //网络请求框架，基于OKHttp的封装
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     //retrofit的Calladapter支持Rxjava
@@ -73,6 +83,6 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.11.0'
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     implementation 'com.jakewharton.rxbinding2:rxbinding:2.1.1'
-    retrolambdaConfig 'net.orfjackal.retrolambda:retrolambda:2.1.0'
+    retrolambdaConfig 'net.orfjackal.retrolambda:retrolambda:2.5.1'
 
 }
