--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,11 +41,10 @@
         <activity
             android:name=".ui.activity.MainActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize|stateHidden" />
+            android:windowSoftInputMode="adjustPan|stateHidden"/>
         <activity
             android:name=".ui.activity.CreateWalletActivity"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize|stateHidden" />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activity.ImportWalletActivity"
             android:screenOrientation="portrait" />
@@ -54,8 +53,7 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activity.SetPasswordForImportWalletActivity"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize|stateHidden" />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activity.CheckWalletInfoActivity"
             android:screenOrientation="portrait" />
