将当前与服务器的连接通过服务来建立

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -90,6 +90,10 @@
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize|stateHidden" />
+
+        <service
+            android:name=".service.TCPService"
+            android:enabled="true" />
     </application>
 
 </manifest>
