--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,4 +83,9 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     implementation 'com.jakewharton.rxbinding2:rxbinding:2.1.1'
     retrolambdaConfig 'net.orfjackal.retrolambda:retrolambda:2.5.1'
+
+
+
+    implementation 'com.android.support:leanback-v17:28.0.0-rc02'
+    implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
 }
