--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="io.bcaas">
 
+    <!--不依赖触摸屏-->
     <uses-feature
         android:name="android.hardware.touchscreen"
         android:required="false" />
+    <!--应该设为false，这样才能在除使用Leanback UI以外的设备上运行-->
     <uses-feature
         android:name="android.software.leanback"
         android:required="true" />
