--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -119,6 +119,10 @@
             android:name=".service.TCPService"
             android:enabled="true" />
 
+        <service
+            android:name=".service.DownloadService"
+            android:enabled="true" />
+
         <!--语言更换广播-->
         <receiver android:name=".receiver.LanguageReceiver">
             <intent-filter>
