--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 apply plugin: 'me.tatarka.retrolambda'
 
 android {
@@ -85,4 +86,8 @@ dependencies {
     retrolambdaConfig 'net.orfjackal.retrolambda:retrolambda:2.5.1'
     implementation 'com.android.support:leanback-v17:28.0.0-rc02'
     implementation 'com.android.support:appcompat-v7:28.0.0-rc02'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
