--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,9 +53,9 @@ android {
             buildConfigField "boolean", "TVDebug", "true" //TV版是否保留测试信息
 
 //            //启用混淆代码的功能
-            minifyEnabled true
+            minifyEnabled false
 //            //移除无用的资源文件
-            shrinkResources true
+            shrinkResources false
 //            //压缩对齐生成的apk包
             zipAlignEnabled true
             //指定混淆规则，需要压缩优化的混淆要把proguard-android.txt换成proguard-android.txt
