--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,11 +56,11 @@ android {
             buildConfigField "boolean", "GuidePage", "false" //是否显示引导
 
             debuggable false
-//            //启用混淆代码的功能
+            //启用混淆代码的功能
             minifyEnabled true
-//            //移除无用的资源文件
+            //移除无用的资源文件
             shrinkResources true
-//            //压缩对齐生成的apk包
+            //压缩对齐生成的apk包
             zipAlignEnabled true
             //指定混淆规则，需要压缩优化的混淆要把proguard-android.txt换成proguard-android.txt
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -100,14 +100,14 @@ dependencies {
     implementation 'com.squareup:otto:1.3.8'
     //底部bottom
     implementation 'com.ashokvarma.android:bottom-navigation-bar:2.0.4'
-    //bitcoinj 需要依赖的库
+    //bitCoinJ 需要依赖的库
     implementation 'org.bitcoinj:bitcoinj-core:0.14.7'
-    //Android 支持 Rxjava
+    //Android 支持 RxJava
     implementation 'io.reactivex.rxjava2:rxjava:2.2.1'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     //网络请求框架，基于OKHttp的封装
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    //retrofit的Calladapter支持Rxjava
+    //retrofit的CallAdapter支持RxJava
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     //retrofit 数据转换器
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
