--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,8 +84,13 @@ android {
         exclude 'org.bitcoin.test.checkpoints.txt'
     }
 }
-
+repositories {
+    flatDir {
+        dirs'libs'
+    }
+}
 dependencies {
+    implementation(name:'qrcode', ext:'aar')
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -96,7 +101,6 @@ dependencies {
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    implementation project(':qrcode')
     implementation 'com.squareup:otto:1.3.8'
     //底部bottom
     implementation 'com.ashokvarma.android:bottom-navigation-bar:2.0.4'
