--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
 *.iml
 .gradle
 /local.properties
-/.idea/caches/build_file_checksums.ser
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
+/.idea
 .DS_Store
 /build
 /captures
@@ -34,8 +31,7 @@ MPChartLib/build/intermediates/rs/
 MPChartLib/build/intermediates/shader_assets/
 MPChartLib/build/intermediates/shaders/
 MPChartLib/build/tmp/
-app/libs/
-app/src/main/java/io/bcaas/exchange/http/requester/
+#app/libs/
 qrcode/build/generated/renderscript_source_output_dir/
 qrcode/build/generated/res/
 qrcode/build/generated/source/apt/
@@ -76,13 +72,13 @@ qrcode/build/intermediates/intermediate-jars/debug/jni/
 .mtj.tmp/
 
 # Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+#*.jar
+#*.war
+#*.nar
+#*.ear
+#*.zip
+#*.tar.gz
+#*.rar
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
@@ -164,8 +160,8 @@ gradle-app.setting
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
 
-app/src/main/assets/
+#app/src/main/assets/
 app/src/main/res/values-en/
-libs/
-src/main/assets/
-src/main/res/values-en/
+#libs/
+#src/main/assets/
+app/release/output.json
