--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ android {
         versionName VERSIONNAME
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        manifestPlaceholders =[appName: "BCAAS"]
     }
     buildTypes {
         debug {
@@ -32,6 +33,7 @@ android {
             minifyEnabled false
             shrinkResources false
             zipAlignEnabled false
+
         }
         BetaTest {
             buildConfigField "boolean", "LogTool", "true" //显示Log
